# data_science_ai_team

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  backend_engineer.py  base_agent.py  cybersecurity.py  data_architect.py  data_engineer.py  data_scientist.py  ml_engineer.py  product_owner.py  qa_tester.py  registry.py
agents/config/: backend_engineer.yaml  cybersecurity.yaml  data_architect.yaml  data_engineer.yaml  data_scientist.yaml  ml_engineer.yaml  product_owner.yaml  qa_tester.yaml
config/: quota_manager.py
governance/: guardrails.py  toxicity_filter.py
orchestration/: acp_protocol.py  crewai_crew.py  langgraph_graph.py  mcp_config.yaml
projects/churn_prediction/src/: __init__.py  evaluate.py  ingest.py  preprocess.py  serve.py  train.py
projects/churn_prediction/tests/: test_churn_pipeline.py
src/data_science_ai_team/: __init__.py
tests/: test_governance.py  test_tools.py
tools/: fastapi_deployer.py  guardium_scanner.py  kaggle_scraper.py  rag_tool.py  registry.py  watsonx_llm.py
